--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@types/node": "^6.0.108",
+    "@types/text-encoding": "0.0.32",
     "fs-extra": "^6.0.1",
     "gulp": "^3.9.1",
-    "gulp-typedoc": "^2.2.0",
     "typedoc": "^0.11.1",
-    "typedoc-plugin-markdown": "^1.1.11"
+    "typedoc-plugin-markdown": "^1.1.12"
   }
 }
