--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fs-extra": "^6.0.1",
     "gulp": "^3.9.1",
     "gulp-typedoc": "^2.2.0",
-    "typedoc": "0.14",
+    "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "1.2"
   }
 }
