Upgrade to gulp 4

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build:docs": "gulp docs"
   },
   "dependencies": {
+    "@types/gulp": "^4.0.6",
     "@types/node": "^6.0.108",
     "fs-extra": "^6.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-typedoc": "^2.2.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "1.2"
