--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -44,7 +44,7 @@ jobs:
           path: _xterm.js
       
       - name: Create Pull Request
-        uses: https://github.com/peter-evans/create-pull-request@2b011faafdcbc9ceb11414d64d0573f37c774b04 # v4.2.3
+        uses: peter-evans/create-pull-request@2b011faafdcbc9ceb11414d64d0573f37c774b04 # v4.2.3
         with:
           commit-message: Update documentation to v${{ steps.package-version.outputs.current-version }}
           title: Update documentation to v${{ steps.package-version.outputs.current-version }}
