--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typedoc-plugin-markdown": "^2.2.17"
   },
   "dependencies": {
-    "xterm.js": "^5.1.0",
+    "xterm": "^5.1.0",
     "xterm-addon-webgl": "^0.14.0"
   }
 }
