Fix default vscode build task
Fixes #192

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,7 @@
 			"type": "npm",
 			"script": "start",
 			"problemMatcher": [],
-			"label": "npm: start",
-			"detail": "bundle exec jekyll serve",
+			"label": "start",
 			"group": {
 				"kind": "build",
 				"isDefault": true
