--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/xtermjs/xtermjs.org",
   "license": "MIT",
   "scripts": {
-    "build:docs": "gulp docs"
+    "build:docs": "gulp docs",
+    "start": "bundle exec jekyll serve"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.6",
