chore: upgrade packages to xterm namespaced

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "typedoc-plugin-markdown": "^2.2.17"
   },
   "dependencies": {
-    "xterm": "^5.1.0",
-    "xterm-addon-webgl": "^0.14.0"
+    "@xterm/addon-webgl": "^0.17.0",
+    "@xterm/xterm": "^5.4.0"
   },
   "packageManager": "yarn@4.1.1"
 }
