--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@types/gulp": "^4.0.6",
     "@types/node": "^6.0.108",
     "fs-extra": "^9.0.0",
-    "gulp": "^4.0.2",
-    "gulp-typedoc": "^2.2.4",
-    "typedoc": "^0.15.0",
-    "typedoc-plugin-markdown": "^2.2.17"
+    "gulp": "^5.0.0",
+    "gulp-typedoc": "patch:gulp-typedoc@npm%3A3.0.2#~/.yarn/patches/gulp-typedoc-npm-3.0.2-0856a60a70.patch",
+    "typedoc": "^0.25.12",
+    "typedoc-plugin-markdown": "^4.0.0-next.54",
+    "typescript": "~5.0.4"
   },
   "dependencies": {
     "@xterm/addon-webgl": "^0.17.0",
     "@xterm/xterm": "^5.4.0"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
