Revert gulp and typedoc changes
Ever since these got merged it broke the github pages build in various
ways.

--- a/package.json
+++ b/package.json
@@ -8,19 +8,17 @@
   "license": "MIT",
   "scripts": {
     "build:docs": "gulp docs",
-    "start": "bundle exec jekyll serve --force_polling",
-    "postinstall": "patch-package"
+    "start": "bundle exec jekyll serve --force_polling"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.6",
     "@types/node": "^6.0.108",
     "fs-extra": "^9.0.0",
-    "gulp": "^5.0.0",
-    "gulp-typedoc": "3.0.2",
-    "patch-package": "^8.0.0",
-    "typedoc": "^0.25.12",
-    "typedoc-plugin-markdown": "^4.0.0-next.54",
-    "typescript": "~5.0.4"
+    "gulp": "^4.0.2",
+    "gulp-typedoc": "^2.2.4",
+    "typedoc": "^0.17.0",
+    "typedoc-plugin-markdown": "^2.2.17",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@xterm/addon-webgl": "^0.17.0",
